@@ -1,3 +1,7 @@
+2003-06-08  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* lilypond-indent.el: tune regexp for show-paren-function.
+
 2003-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/ly2dvi.py (run_latex, run_dvips, 'main'): Make preview
